--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
   <title>Princing Component</title>
   <link rel="stylesheet" href="./src/styles/style.css"/>
   <script src="./src/scripts/script.js" defer></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
+  <header>
+    <h2>Our Pricing</h2>
+    <div class="wrapper-button">
+      <p>Anually</p>
+      <input type="checkbox" id="checkBoxButton" class="handle-checkbox">
+      <label for="checkBoxButton" class="handle-button"></label>
+      <p>Monthly</p>
+    </div>
+  </header>
+
+  <main>
+
+  </main>
 </body>
 
 </html>
