--- a/index.html
+++ b/index.html
@@ -17,17 +17,33 @@
 
 <body>
   <header>
-    <h2>Our Pricing</h2>
-    <div class="wrapper-button">
-      <p>Anually</p>
-      <input type="checkbox" id="checkBoxButton" class="handle-checkbox">
-      <label for="checkBoxButton" class="handle-button"></label>
-      <p>Monthly</p>
+    <div class="wrapper-header">
+      <h2>Our Pricing</h2>
+      <div class="wrapper-button">
+        <p>Anually</p>
+        <input type="checkbox" id="checkBoxButton" class="handle-checkbox">
+        <label for="checkBoxButton" class="handle-button"></label>
+        <p>Monthly</p>
+    </div>
     </div>
   </header>
 
   <main>
-
+    <div class="wrapper-main">
+      <div class="card">
+        <h3>Basic</h3>
+        <div class="price">
+          <h2>$</h2>
+          <h1>199.99</h1>
+        </div>
+        <div class="details">
+          <b>500 GB Storage</b>
+          <b>2 Users Allowed</b>
+          <b>Send up to 3 GB</b>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
   </main>
 </body>
 
