--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
         </div>
         <a href="#">LEARN MORE</a>
       </div>
+
+      <div class="card">
+        <h3>Professional</h3>
+        <div class="price">
+          <h2>$</h2>
+          <h1>199.99</h1>
+        </div>
+        <div class="details">
+          <b>500 GB Storage</b>
+          <b>2 Users Allowed</b>
+          <b>Send up to 3 GB</b>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+      
+
+      <div class="card">
+        <h3>Basic</h3>
+        <div class="price">
+          <h2>$</h2>
+          <h1>199.99</h1>
+        </div>
+        <div class="details">
+          <b>500 GB Storage</b>
+          <b>2 Users Allowed</b>
+          <b>Send up to 3 GB</b>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
     </div>
   </main>
 </body>
